# molgraph

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docker/: README.md
docker/molgraph-tf/: Dockerfile
docker/molgraph-tf-gpu/: Dockerfile
docker/molgraph-tf-juptyer/: Dockerfile
docker/molgraph-tf-jupyter-gpu/: Dockerfile
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: GNN-Benchmarking.ipynb  GNN-benchmarking.ipynb  QSAR-GNN-Tutorial.ipynb
molgraph/: __init__.py  _filter_warnings.py  internal.py
molgraph/applications/: __init__.py
molgraph/chemistry/: __init__.py  _set_logging.py  conformer_generator.py  conformer_utils.py  encoders.py  features.py  molecular_encoders.py  ops.py  transform_ops.py  vis.py  vis_utils.py
molgraph/layers/: __init__.py  _filter_warnings.py  base.py  gnn.py  gnn_input.py  gnn_input_layer.py  gnn_layer.py  gnn_ops.py  ops.py
molgraph/losses/: __init__.py  link_losses.py  masked_losses.py
molgraph/metrics/: __init__.py  masked_metrics.py  mean_relative_error.py
molgraph/models/: __init__.py  base.py  dgin.py  dmpnn.py  gin.py  link_prediction.py  mask_prediction.py  mpnn.py
molgraph/tensors/: __init__.py  graph_keras_tensor.py  graph_tensor.py
tests/: README.md  test_chemistry.py  test_interpretability.py  test_layers.py  test_models.py  test_models_2.py  test_tensors.py  test_tensors_2.py  test_tensors_3.py  test_tensors_4.py
tests/chemistry/: test_chemistry_encoders.py
tests/layers/: _common.py  test_dtnn_conv.py  (+15 more)
(+92 files in other folders)
